# efi-launcher

./: .gitignore  Cargo.toml  README.md  build.sh  run-qemu.sh
.github/workflows/: build.yml
esp/: launcher.cfg
src/: config.rs  launch.rs  main.rs  menu.rs  ui.rs
